# fleche

./: Cargo.toml
src/: args.rs  bout.rs  fencer.rs  file_management.rs  main.rs  state.rs  variants.rs
src/commands/: init.rs  mod.rs
src/round/: group.rs  mod.rs  poule.rs
