[package]
name = "fleche"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
inquire = { version = "0.6.2", features = ["editor"]}
serde = { version = "1.0.164", features = ["derive", "rc"] }
serde_json = "1.0.97"
serde_traitobject = "0.2.8"
strum = { version = "0.25.0", features = ["derive"] }
